// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders mulitple images 1`] = `
<Fragment>
  <div
    className="container"
    key="0"
  >
    <img
      alt=""
      className="image"
      src="//:0"
    />
  </div>
  <div
    className="container"
    key="1"
  >
    <img
      alt=""
      className="image"
      src="//:0"
    />
  </div>
</Fragment>
`;

exports[`renders one image component 1`] = `
<Fragment>
  <div
    className="container"
    key="0"
  >
    <img
      alt=""
      className="image"
      src="//:0"
    />
  </div>
</Fragment>
`;
